# rust-plugin-experiment

./: Cargo.toml  README.md
application/: Cargo.toml
application/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
example/application/: Cargo.toml
example/application/src/: main.rs
example/common/: Cargo.toml
example/common/src/: lib.rs
example/plugin/: Cargo.toml
example/plugin/src/: lib.rs
plugin/: Cargo.toml
plugin-example/: Cargo.toml
plugin-example/src/: lib.rs
plugin-mgmt/: Cargo.toml  README.md  README.tpl
plugin-mgmt/src/: lib.rs  plug_interface.rs  renting.rs
plugin/src/: lib.rs
